# Seq.hpp

./: .clang-format  .clang-format-include  .clang-tidy  .clangd  .gitignore  LICENSE  README.md  Seq.hpp.wrap  meson.build  meson.format  meson.options
docs/: getting_started.md
examples/: README.md
examples/001_readme/: 001_readme.cpp
examples/005_ienumerable/: 005_ienumerable.cpp
hdr/seq/: seq.hpp
hdr/seq/impl/: assert.hpp  extras.hpp  ienumerable.hpp  selectors.hpp  signature.hpp  utils.hpp
hdr/seq/lib/: config.hpp  debug.hpp  ienumerable.hpp  parameter_helpers.hpp  selectors.hpp  seq_helper.hpp  seq_nocapture.hpp  type_inspect_utils.hpp
scripts/: dev.py  dev_check.py
subprojects/: catch2.wrap
subprojects/packagefiles/catch2/: 0001.patch  custom.patch
test/: main.cpp  test.cpp  test_ienumerable.cpp  test_imports.cpp  test_seq.cpp  test_utils.cpp  test_utils.hpp
test/test/: test_isseq.hpp  test_seq.hpp
test/utils/: assert.hpp  failure.hpp  formatters.hpp  log.hpp
